@@ -1,3 +1,9 @@
+2008-03-06  Johan Dahlin  <johan@gnome.org>
+
+	* flumotion/component/encoders/wma/wma_wizard.py:
+	* flumotion/component/encoders/wmv/wmv_wizard.py:
+	Remove GPL headers
+
 2008-03-04  Michael Smith <msmith@fluendo.com>
 
 	* flumotion/component/producers/wms/asfparse.py:
